Amazon titan with model parameters

--- a/bedrock_samples/amazon-titan/amazon-titan-text-generation-with-model-params.ipynb
+++ b/bedrock_samples/amazon-titan/amazon-titan-text-generation-with-model-params.ipynb
@@ -2,75 +2,81 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e4f0552-0692-4be8-8418-61c28574d4a4",
+   "id": "e93572a0-48e7-4753-8262-7d70c26ac2e6",
    "metadata": {},
    "source": [
-    "# Text generation using Amazon Titan - a foundation model for Generative AI"
+    "# Text generation using Amazon Titan and Model Parameters\n",
+    "There are model parameters which can be tuned to get variance(deterministic/non-deterministic) of response based on your needs.\n",
+    "Most common ones in text generation models are, \n",
+    "- temperature\n",
+    "- topP\n",
+    "- maxTokenCount\n",
+    "- stopSequence\n",
+    "This example demonstrates how you can use this with Amazon Titan while generating a text - in this case a poem"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5ab35fa9-16ff-4e91-86f1-bf113d7a2975",
+   "id": "24545596-4902-4742-b044-9ff2c0116f95",
    "metadata": {},
    "source": [
-    "This sample implemetation is going to use a generative AI pre-trained model to create text summarisation. "
+    "## Step 1: Configure AWS environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "590ee925-c088-44fe-a61b-5fbf198ad0f9",
+   "execution_count": 1,
+   "id": "ba658c50-7971-4a7e-a3cc-9f5d2e0c8da5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's first configure AWS environment to connect with the foundation model\n",
-    "# One of the was to connect to AWS is using access and secret keys and these can be set as env variables. \n",
     "# NOT RECOMMENDED FOR PRODUCTION DEPLOYMENT OR FOR SHARING IN PUBLIC.\n",
     "import os\n",
-    "os.environ['AWS_ACCESS_KEY_ID'] = 'Your key id'\n",
-    "os.environ['AWS_SECRET_ACCESS_KEY'] = 'Your key'\n",
+    "# os.environ['AWS_ACCESS_KEY_ID'] = 'Your key id'\n",
+    "# os.environ['AWS_SECRET_ACCESS_KEY'] = 'Your key'\n",
     "\n",
     "os.environ['AWS_DEFAULT_REGION'] = 'us-east-1'"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb83b9a9-fba8-4ecf-9de1-71f91db4b660",
+   "cell_type": "markdown",
+   "id": "d22a7ee6-5fe5-446c-9c97-24132df8e300",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import boto3 to access AWS resources using python\n",
-    "import boto3"
+    "## Step 2: Explore and choose the model of your choice\n",
+    "We will be using `amazon.titan-text-express-v1` in this example"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3a2a03b9-7bd8-44a5-84a3-d45ff459b63a",
+   "id": "29197d7a-3f09-473d-b86f-850bda7f0864",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bedroc client to explore the available foundation models\n",
+    "# import boto3 to access AWS resources using python\n",
+    "import boto3\n",
+    "\n",
+    "# bedrock client to explore the available foundation models\n",
     "bedrock = boto3.client(service_name='bedrock',region_name='us-east-1')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9270700a-b1b1-4a7b-a7de-365712afaaa5",
+   "id": "feae2e2c-3e41-477b-99a9-7dfc69ff501e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'ec28e0ed-ffbb-467d-9f87-a3d8d123ebd2',\n",
+       "{'ResponseMetadata': {'RequestId': 'ddbe5769-08e4-45b7-8767-f3c589372214',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Tue, 06 May 2025 20:55:46 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Wed, 07 May 2025 04:26:47 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'content-length': '54644',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': 'ec28e0ed-ffbb-467d-9f87-a3d8d123ebd2'},\n",
+       "   'x-amzn-requestid': 'ddbe5769-08e4-45b7-8767-f3c589372214'},\n",
        "  'RetryAttempts': 0},\n",
        " 'modelSummaries': [{'modelArn': 'arn:aws:bedrock:us-east-1::foundation-model/amazon.titan-tg1-large',\n",
        "   'modelId': 'amazon.titan-tg1-large',\n",
@@ -992,33 +998,26 @@
     }
    ],
    "source": [
+    "# To list available models\n",
     "bedrock.list_foundation_models()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a93ef8e0-136c-4af0-afab-5afff251215a",
-   "metadata": {},
-   "source": [
-    "### Let's use `amazon.titan-text-express-v1` model for this example."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fda4c3b9-4e64-4ac7-90bd-5c546037322f",
+   "id": "9f256252-f413-4f55-93b9-a3e3f205b894",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'fc114c5c-0dfb-4108-abd8-787361088fe1',\n",
+       "{'ResponseMetadata': {'RequestId': '991f6049-e46b-4b8e-9f82-04dead83d0d2',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Tue, 06 May 2025 20:55:47 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Wed, 07 May 2025 04:27:23 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'content-length': '524',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': 'fc114c5c-0dfb-4108-abd8-787361088fe1'},\n",
+       "   'x-amzn-requestid': '991f6049-e46b-4b8e-9f82-04dead83d0d2'},\n",
        "  'RetryAttempts': 0},\n",
        " 'modelDetails': {'modelArn': 'arn:aws:bedrock:us-east-1::foundation-model/amazon.titan-text-express-v1',\n",
        "  'modelId': 'amazon.titan-text-express-v1',\n",
@@ -1038,17 +1037,17 @@
     }
    ],
    "source": [
-    "# To get information about this model\n",
+    "# To get information about the model\n",
     "bedrock.get_foundation_model(modelIdentifier='amazon.titan-text-express-v1')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "351f21d6-801c-4e71-b1fd-a1ac1645ba61",
+   "id": "c541c8e3-2557-4459-8759-aa7fb16795f0",
    "metadata": {},
    "source": [
-    "### Step 1: Prepare input for the model\n",
-    "Input format and model parameters can be obtained from the documentaion. Example - https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters-titan-text.html \n",
+    "## Step 3: Prepare prompt for the model¶\n",
+    "Prompt format and model parameters can be found on the relevant model documentaion page. Example - https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters-titan-text.html\n",
     "```\n",
     "{\n",
     "    \"inputText\": string,\n",
@@ -1065,50 +1064,42 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13332b61-f477-4f6c-a6a3-cf5b3f1c84e6",
+   "id": "e4f676a4-81b9-4b77-947a-69f653d5fefc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"inputText\": \"Write a poem about sky\", \"textGenerationConfig\": {\"temperature\": 1.0, \"topP\": 1.0, \"maxTokenCount\": 50}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Lets use json module to construct the input\n",
-    "import json"
+    "# Lets use json module to construct the prompt\n",
+    "import json\n",
+    "\n",
+    "req_with_model_params = json.dumps({'inputText': 'Write a poem about sky',\n",
+    "                                         'textGenerationConfig':{\n",
+    "                                              'temperature': 1.0,\n",
+    "                                               'topP': 1.0,\n",
+    "                                               'maxTokenCount': 50\n",
+    "                                         }})\n",
+    "print(req_with_model_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5382177d-f96e-4565-92a0-26d2b88965ca",
+   "metadata": {},
+   "source": [
+    "## Step 4: Create bedrock runtime to invoke the model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8654963e-2a90-4e29-a69c-b98253c02eca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"inputText\": \"What is the highest mountain in the world?\"}'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prompt = 'What is the highest mountain in the world?'\n",
-    "req = json.dumps({\n",
-    "    'inputText': prompt})\n",
-    "req"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc496ef0-426a-4f1a-ac9b-f9f80c6fffea",
-   "metadata": {},
-   "source": [
-    "### Step 2: Create bedrock runtime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1214af04-6bc9-4dc3-a4a0-e405b4390a59",
+   "id": "1febe9d4-495f-4b7a-84c1-e8dd496d234b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,47 +1108,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5123f93-7e93-4cbd-b1ea-18a236953e9c",
+   "id": "850671a6-3db8-447e-b276-a73a6feb9ac1",
    "metadata": {},
    "source": [
-    "### Step 3: Invoke the model and get response"
+    "## Step 5: Invoke the model to get the text generated"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dbdb7678-34d2-43d7-87bc-a4db6a437216",
+   "id": "d02bf5ac-0a96-46c7-a3a1-7c53bc4d65b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ResponseMetadata': {'RequestId': '759db37d-a1cd-4bc7-aeb5-143c12747685', 'HTTPStatusCode': 200, 'HTTPHeaders': {'date': 'Wed, 07 May 2025 04:34:18 GMT', 'content-type': 'application/json', 'content-length': '311', 'connection': 'keep-alive', 'x-amzn-requestid': '759db37d-a1cd-4bc7-aeb5-143c12747685', 'x-amzn-bedrock-invocation-latency': '2264', 'x-amzn-bedrock-output-token-count': '50', 'x-amzn-bedrock-input-token-count': '5'}, 'RetryAttempts': 0}, 'contentType': 'application/json', 'body': <botocore.response.StreamingBody object at 0x10c83e200>}\n"
+     ]
+    }
+   ],
    "source": [
-    "response = bedrock_runtime.invoke_model(body=req, \n",
-    "                                        modelId='amazon.titan-text-express-v1',\n",
-    "                                        contentType='application/json', \n",
-    "                                        accept = 'application/json')"
+    "response = bedrock_runtime.invoke_model(body=req_with_model_params,\n",
+    "                                       modelId='amazon.titan-text-express-v1')\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01c73abe-23e1-416f-92e9-9f9ad22f082c",
+   "metadata": {},
+   "source": [
+    "## Step 6: Extract the generated content from the response body"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "69798013-c735-4aa5-bcfd-bf3369af9dc8",
+   "id": "276dda62-376b-44fe-bacf-3aa09762c516",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '5ea1fb20-ae5a-47f8-a0a1-28618ffdf5bc',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Tue, 06 May 2025 20:55:54 GMT',\n",
-       "   'content-type': 'application/json',\n",
-       "   'content-length': '546',\n",
-       "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '5ea1fb20-ae5a-47f8-a0a1-28618ffdf5bc',\n",
-       "   'x-amzn-bedrock-invocation-latency': '6588',\n",
-       "   'x-amzn-bedrock-output-token-count': '128',\n",
-       "   'x-amzn-bedrock-input-token-count': '9'},\n",
-       "  'RetryAttempts': 0},\n",
-       " 'contentType': 'application/json',\n",
-       " 'body': <botocore.response.StreamingBody at 0x10d3bae00>}"
+       "{'inputTextTokenCount': 5,\n",
+       " 'results': [{'tokenCount': 50,\n",
+       "   'outputText': '\\nFrom day to day as I lay down\\nI stare at the sky\\nFeeling the cold of the breeze touch my skin\\nAnd have a deep breath to relax myself\\nIts deadly colors brought peace without cease\\nAnd a majestic view of the',\n",
+       "   'completionReason': 'LENGTH'}]}"
       ]
      },
      "execution_count": 10,
@@ -1166,32 +1163,33 @@
     }
    ],
    "source": [
-    "response"
+    "poem_response = json.loads(response.get('body').read())\n",
+    "poem_response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fceab1ec-b6e4-4a4d-9467-5e412ee84b59",
+   "execution_count": 12,
+   "id": "b6a5d255-982e-4a93-829f-b59c8c357aee",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'inputTextTokenCount': 9,\n",
-       " 'results': [{'tokenCount': 128,\n",
-       "   'outputText': '\\nMount Everest, the highest mountain on Earth, is located in the Mahalangur Himal sub-range of the Himalayas. The mountain is in the Mahalangur Himal sub-range of the Himalayas, and the border between Nepal and Tibet runs across its summit point. It is situated in the Solukhumbu District of Province No. 1, 8 km (5.0 mi) northeast of Mount Lhotse (8,516 m (27,940 ft)). Everest is the highest point on Earth, with a topographic prominence of 8,',\n",
-       "   'completionReason': 'LENGTH'}]}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "From day to day as I lay down\n",
+      "I stare at the sky\n",
+      "Feeling the cold of the breeze touch my skin\n",
+      "And have a deep breath to relax myself\n",
+      "Its deadly colors brought peace without cease\n",
+      "And a majestic view of the\n"
+     ]
     }
    ],
    "source": [
-    "response_body = json.loads(response.get(\"body\").read())\n",
-    "response_body"
+    "poem = poem_response['results'][0]['outputText']\n",
+    "print(poem)"
    ]
   }
  ],
