Stability AI - Text to Image

--- a/bedrock_samples/stability-ai/stability-ai-text-to-image.ipynb
+++ b/bedrock_samples/stability-ai/stability-ai-text-to-image.ipynb
@@ -2,21 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "61da5084-46ba-4240-b307-86808e03a6c8",
+   "id": "49550517-2813-408e-893f-8f72278d717a",
    "metadata": {},
    "source": [
-    "# Meta Llama - Text generation with inference parameters\n",
+    "# Text to Image using Stability AI model\n",
     "\n",
-    "Anaother text generation LLM availabe in Aamzon Bedrock is - Llama. In this example, I am going to use this model to generate text. \n",
+    "We can create images from text prompt using a number of models available in Amazon bedrock. Important inference parameters to consider while generating image from a text are,\n",
+    "- **text prompt** - Can be positive and negative\n",
+    "- **seed** - Random seed for reproducibility\n",
+    "- **size** - Height and Width\n",
+    "- **cfg-scale** - Indicates how close the image should for the prompt. Lower number will increase randomness in the generation of the image.\n",
     "\n",
-    "Note - Eventhough some of these inference parameters applicable for any LLM - (temperature, topP, topK, stop-sequence, max_token_count), not all models follow same model/inference syntax and request/response structure. Ensure to refere to the documentation to understand the correct inference parameters, response messages and syntax.\n",
+    "Note - To find the exact parameter names, refer to model documentation.\n",
     "\n",
-    "Refence documentation - https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters-meta.html"
+    "We are going to generate an image of a flower `rose` using Stability AI model - `stability.stable-diffusion-xl-v1`\n",
+    "\n",
+    "Documentaion - https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters-diffusion-1-0-text-image.html "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "057eb9d9-9aa1-4362-996e-3375783f3f8d",
+   "id": "b3366fc3-c418-4b91-b77b-f9ad6cf5f83d",
    "metadata": {},
    "source": [
     "## Step 1: Configure AWS environment"
@@ -25,23 +31,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ef5b73ea-1ce3-43ff-b454-8bcc55266e08",
+   "id": "d4e7771c-05fd-4b5a-931e-ede8e24d0440",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set env variables using os module .\n",
     "## NOT RECOMMENDED FOR PRODUCTION DEPLOYMENTS OR TO SHARE ON PUBLIC DOMAIN\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "40127be8-8777-4e7e-bb8d-0a2b320bb716",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['AWS_SECRET_ACCESS_KEY'] = 'your key id'\n",
+    "import os\n",
+    "os.environ['AWS_ACCESS_KEY_ID'] = 'your key id'\n",
     "os.environ['AWS_SECRET_ACCESS_KEY'] = 'your secret'\n",
     "\n",
     "os.environ['AWS_DEFAULT_REGION'] = 'us-east-1'"
@@ -49,17 +46,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b681ffee-a6bd-492e-9568-820a105a8b9f",
+   "id": "2c376b08-0feb-466a-98d1-5da7b65ff139",
    "metadata": {},
    "source": [
     "## Step 2: Explore and choose the model of your choice\n",
-    "we will be using Meta Llama LLM - `meta.llama3-70b-instruct-v1:0`"
+    "We will use Stability AI model - `stability.stable-diffusion-xl-v1`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1363f1bb-23e0-44f9-ac22-c935932fb8e3",
+   "execution_count": 2,
+   "id": "2194f1ae-2ef0-47c2-8766-95e7b9500d0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "40331716-5c7f-4363-80fd-2402a08ca47c",
+   "execution_count": 3,
+   "id": "b7792b70-513b-4370-8661-eab727a5f26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,20 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "223b0c52-d6bc-4512-b736-5a7c84257b45",
+   "execution_count": 4,
+   "id": "6c20aa51-1351-43cd-a924-8fa6232714da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '05dd09eb-e453-4828-8a95-82a081a63023',\n",
+       "{'ResponseMetadata': {'RequestId': '314391ff-6af4-4bbc-9bc5-58b4b672ee55',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Thu, 08 May 2025 10:19:19 GMT',\n",
+       "  'HTTPHeaders': {'date': 'Fri, 09 May 2025 05:11:23 GMT',\n",
        "   'content-type': 'application/json',\n",
        "   'content-length': '54644',\n",
        "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '05dd09eb-e453-4828-8a95-82a081a63023'},\n",
+       "   'x-amzn-requestid': '314391ff-6af4-4bbc-9bc5-58b4b672ee55'},\n",
        "  'RetryAttempts': 0},\n",
        " 'modelSummaries': [{'modelArn': 'arn:aws:bedrock:us-east-1::foundation-model/amazon.titan-tg1-large',\n",
        "   'modelId': 'amazon.titan-tg1-large',\n",
@@ -1009,77 +1006,90 @@
        "   'modelLifecycle': {'status': 'ACTIVE'}}]}"
       ]
      },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To list available models\n",
+    "bedrock.list_foundation_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b31faec5-5c4d-4b32-9776-854efe145ed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': '1871493a-dec1-42f2-a238-a6c473d415ab',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'date': 'Fri, 09 May 2025 05:11:23 GMT',\n",
+       "   'content-type': 'application/json',\n",
+       "   'content-length': '532',\n",
+       "   'connection': 'keep-alive',\n",
+       "   'x-amzn-requestid': '1871493a-dec1-42f2-a238-a6c473d415ab'},\n",
+       "  'RetryAttempts': 0},\n",
+       " 'modelDetails': {'modelArn': 'arn:aws:bedrock:us-east-1::foundation-model/stability.stable-diffusion-xl-v1',\n",
+       "  'modelId': 'stability.stable-diffusion-xl-v1',\n",
+       "  'modelName': 'SDXL 1.0',\n",
+       "  'providerName': 'Stability AI',\n",
+       "  'inputModalities': ['TEXT', 'IMAGE'],\n",
+       "  'outputModalities': ['IMAGE'],\n",
+       "  'customizationsSupported': [],\n",
+       "  'inferenceTypesSupported': ['ON_DEMAND'],\n",
+       "  'modelLifecycle': {'status': 'LEGACY'}}}"
+      ]
+     },
      "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bedrock.list_foundation_models()"
+    "# Get model details\n",
+    "bedrock.get_foundation_model(modelIdentifier='stability.stable-diffusion-xl-v1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e6036f-0a5d-48af-8465-2eb54a7072c3",
+   "metadata": {},
+   "source": [
+    "## Step 3: Prepare prompt for the model\n",
+    "\n",
+    "As per the documentation below is the request format,\n",
+    "```\n",
+    "{\n",
+    "        \"text_prompts\": [\n",
+    "            {\n",
+    "                \"text\": string,\n",
+    "                \"weight\": float\n",
+    "            }\n",
+    "        ],\n",
+    "        \"height\": int,\n",
+    "        \"width\": int,\n",
+    "        \"cfg_scale\": float,\n",
+    "        \"clip_guidance_preset\": string,\n",
+    "        \"sampler\": string,\n",
+    "        \"samples\",\n",
+    "        \"seed\": int,\n",
+    "        \"steps\": int,\n",
+    "        \"style_preset\": string,\n",
+    "        \"extras\" :JSON object\n",
+    "        \n",
+    "}\n",
+    "```\n",
+    "We will use only few parameters in this example"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "21bece7b-1057-4958-b414-19c0668db5ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '5730015a-c54f-4ff0-ac41-c575c5cb5d5b',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Thu, 08 May 2025 10:19:19 GMT',\n",
-       "   'content-type': 'application/json',\n",
-       "   'content-length': '521',\n",
-       "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '5730015a-c54f-4ff0-ac41-c575c5cb5d5b'},\n",
-       "  'RetryAttempts': 0},\n",
-       " 'modelDetails': {'modelArn': 'arn:aws:bedrock:us-east-1::foundation-model/meta.llama3-70b-instruct-v1:0',\n",
-       "  'modelId': 'meta.llama3-70b-instruct-v1:0',\n",
-       "  'modelName': 'Llama 3 70B Instruct',\n",
-       "  'providerName': 'Meta',\n",
-       "  'inputModalities': ['TEXT'],\n",
-       "  'outputModalities': ['TEXT'],\n",
-       "  'responseStreamingSupported': True,\n",
-       "  'customizationsSupported': [],\n",
-       "  'inferenceTypesSupported': ['ON_DEMAND'],\n",
-       "  'modelLifecycle': {'status': 'ACTIVE'}}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bedrock.get_foundation_model(modelIdentifier='meta.llama3-70b-instruct-v1:0')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4342deac-c4be-4606-bda3-648fa0c6992b",
-   "metadata": {},
-   "source": [
-    "## Step 3: Prepare prompt for the model\n",
-    "\n",
-    "Document reference - https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters-meta.html#model-parameters-meta-request-response \n",
-    "```\n",
-    "{\n",
-    "    \"prompt\": string,\n",
-    "    \"temperature\": float,\n",
-    "    \"top_p\": float,\n",
-    "    \"max_gen_len\": int\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "Meta also provides recommendation for prompt text for optimum results. Refer to prompt engineering concepts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "bbc55f99-9c08-4301-98b7-b54c652d8879",
+   "id": "5cb17ed6-5f64-42a1-9106-68975102f0ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,51 +1099,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d629804d-e8dc-457c-8c1a-384fe33bf956",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the prompt for the model.\n",
-    "prompt = \"Tell me about United Kingdom\"\n",
-    "\n",
-    "# Embed the prompt in Llama 3's instruction format.\n",
-    "formatted_prompt = f\"\"\"\n",
-    "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
-    "{prompt}\n",
-    "<|eot_id|>\n",
-    "<|start_header_id|>assistant<|end_header_id|>\n",
-    "\"\"\"\n",
-    "\n",
-    "req = json.dumps({\n",
-    "    'prompt': formatted_prompt,\n",
-    "    'temperature': 1.0,\n",
-    "    'top_p': 1.0,\n",
-    "    'max_gen_len': 50\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "072a3344-840e-42e8-9a37-c4e0fed3f94c",
+   "execution_count": 7,
+   "id": "5a65cc16-fbe8-4df4-a2bc-85cb2d264467",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"prompt\": \"\\n<|begin_of_text|><|start_header_id|>user<|end_header_id|>\\nTell me about United Kingdom\\n<|eot_id|>\\n<|start_header_id|>assistant<|end_header_id|>\\n\", \"temperature\": 1.0, \"top_p\": 1.0, \"max_gen_len\": 50}\n"
+      "{\"text_prompts\": [{\"text\": \"Create a picture of a natural rose flower with dews on the pettles, leaf and stem\", \"weight\": 1}, {\"text\": \"paining, drawing, blury\", \"weight\": -1}], \"height\": 1024, \"width\": 1024, \"cfg_scale\": 7, \"samples\": 1, \"seed\": 5, \"steps\": 30}\n"
      ]
     }
    ],
    "source": [
+    "# Define the prompt for the model.\n",
+    "positive_prompt = \"Create a picture of a natural rose flower with dews on the pettles, leaf and stem\"\n",
+    "negative_prompt = \"paining, drawing, blury\"\n",
+    "\n",
+    "req = json.dumps({\n",
+    "        \"text_prompts\": [\n",
+    "            {\n",
+    "                \"text\": positive_prompt,\n",
+    "                \"weight\": 1\n",
+    "            },\n",
+    "            {\n",
+    "                \"text\": negative_prompt,\n",
+    "                \"weight\": -1\n",
+    "            },            \n",
+    "        ],\n",
+    "        \"height\": 1024,\n",
+    "        \"width\": 1024,\n",
+    "        \"cfg_scale\": 7,\n",
+    "        \"samples\": 1,\n",
+    "        \"seed\": 5,\n",
+    "        \"steps\": 30        \n",
+    "})\n",
     "print(req)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a38c567-ac78-49cc-9347-6eb824563668",
+   "id": "79f683c3-c9f8-46ce-8dce-317954b4b74f",
    "metadata": {},
    "source": [
     "## Step 4: Create bedrock runtime to invoke the model"
@@ -1141,8 +1147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0292be2e-0d80-4238-ac93-b73416bded55",
+   "execution_count": 8,
+   "id": "58efde3f-78da-4513-ae63-035481b6fdb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,112 +1157,119 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a08ff8ed-28c0-43aa-b978-6ce478210d69",
+   "id": "cb6e6cdc-e0de-45ee-9732-2f699b45a971",
    "metadata": {},
    "source": [
-    "## Step 5: Invoke the model to get the text generated"
+    "## Step 5: Invoke the model to get the image generated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0ff2a240-442a-41d4-a84b-d2c6fed024eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = bedrock_runtime.invoke_model(body=req, modelId='stability.stable-diffusion-xl-v1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "980ccec1-3f88-466f-8b7f-dbb2a3539b6e",
+   "metadata": {},
+   "source": [
+    "## Step 6: Process the response to get the image\n",
+    "Usually the image will be in base64 format. Need to use base64 decoder to get the image in the formats such as png, jpeg etc.\n",
+    "Stability AI model response format is as below,\n",
+    "```\n",
+    "{\n",
+    "    \"result\": string,\n",
+    "    \"artifacts\": [\n",
+    "        {\n",
+    "            \"seed\": int,\n",
+    "            \"base64\": string,\n",
+    "            \"finishReason\": string\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "```\n",
+    "Lets use base64 and PIL.Image models for this purpose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "df508c8e-2320-4969-8d99-4c6abc160d6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_body = json.loads(response.get('body').read())\n",
+    "#response_body"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "16e18bc9-2aab-4116-a67d-7407c4d919e4",
+   "id": "b6a6a401-e00c-4b33-bd04-7350baaa9c49",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '1b0e639d-40c8-41c5-a46a-cea0bbd9cc10',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'date': 'Thu, 08 May 2025 10:19:20 GMT',\n",
-       "   'content-type': 'application/json',\n",
-       "   'content-length': '338',\n",
-       "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '1b0e639d-40c8-41c5-a46a-cea0bbd9cc10',\n",
-       "   'x-amzn-bedrock-invocation-latency': '1164',\n",
-       "   'x-amzn-bedrock-output-token-count': '50',\n",
-       "   'x-amzn-bedrock-input-token-count': '18'},\n",
-       "  'RetryAttempts': 0},\n",
-       " 'contentType': 'application/json',\n",
-       " 'body': <botocore.response.StreamingBody at 0x1085cafe0>}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response = bedrock_runtime.invoke_model(body=req, modelId='meta.llama3-70b-instruct-v1:0')\n",
-    "response"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f562f59-902d-424f-bd02-c11dab5ded3a",
-   "metadata": {},
-   "source": [
-    "## Step 6: Extract the generated content from the response body\n",
-    "\n",
-    "response format\n",
-    "```\n",
-    "{\n",
-    "    \"generation\": \"\\n\\n<response>\",\n",
-    "    \"prompt_token_count\": int,\n",
-    "    \"generation_token_count\": int,\n",
-    "    \"stop_reason\" : string\n",
-    "}\n",
-    "```"
+    "# Use base64 module to decode the image\n",
+    "import base64"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "865bdc3f-ceea-435e-bc53-44f52ad271fe",
+   "id": "9a0fa005-e84c-4b14-99eb-853ec2b56d21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'generation': 'The United Kingdom (UK) - a country steeped in history, culture, and natural beauty!\\n\\n** Geography and Climate **\\n\\nThe UK is an island nation located off the northwest coast of Europe, comprising four constituent countries:\\n\\n1. **England**:',\n",
-       " 'prompt_token_count': 18,\n",
-       " 'generation_token_count': 50,\n",
-       " 'stop_reason': 'length'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "body = json.loads(response.get('body').read())\n",
-    "body"
+    "decoded_image = base64.b64decode(response_body['artifacts'][0]['base64'])\n",
+    "#decoded_image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a9d0baf-d236-4e3f-b4de-a27e060dd883",
+   "id": "54058903-f146-4cfd-a00e-122769340e65",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The United Kingdom (UK) - a country steeped in history, culture, and natural beauty!\n",
-      "\n",
-      "** Geography and Climate **\n",
-      "\n",
-      "The UK is an island nation located off the northwest coast of Europe, comprising four constituent countries:\n",
-      "\n",
-      "1. **England**:\n"
+      "Looking in indexes: https://pypi.python.org/simple\n",
+      "Requirement already satisfied: Pillow in /Users/nila/Documents/Learning.nosync/AI/Nila-AI-ML-Projects/bedrock_samples/env/lib/python3.13/site-packages (11.2.1)\n"
      ]
     }
    ],
    "source": [
-    "gen_text = body['generation']\n",
-    "print(gen_text)"
+    "# If you encounter PIL not found, then install Pillow - works on MacOS\n",
+    "!pip install Pillow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0955b9b5-73cf-4bd0-90a6-574187e53ddb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To export the image as png, lets use PIL.Image\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "503dfc36-1002-4725-95d2-42957abe4af7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"rose.png\", 'wb') as file:\n",
+    "    file.write(decoded_image)\n",
+    "#Image.open(\"rose.png\")"
    ]
   }
  ],
